--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -98,5 +98,5 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "exclude": ["./node_modules"],
-  "include": ["src/**/*", "custom.d.ts"]
+  "include": ["src/**/*", "src/custom.d.ts"]
 }
