--- a/client2/package.json
+++ b/client2/package.json
@@ -14,7 +14,10 @@
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -26,6 +29,7 @@
     "@babel/runtime": "^7.16.7",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.21",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
