--- a/client2/package.json
+++ b/client2/package.json
@@ -16,8 +16,12 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
+    "react-tooltip": "^4.2.21",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -27,12 +31,14 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "^7.16.7",
+    "@types/node": "^17.0.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-transition-group": "^4.4.4",
     "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.21",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-dev-server": "^4.7.2",
+    "@types/webpack": "^4.4.11",
+    "@types/webpack-dev-server": "^3.1.1",
     "babel-loader": "^8.2.3",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
