--- a/client2/tsconfig.json
+++ b/client2/tsconfig.json
@@ -11,7 +11,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "target": "es6",
+    "module": "commonjs",
+    "types": ["node"]
   },
+  "exclude": ["./node_modules"],
   "include": ["src"]
 }
