--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "md5": "^2.3.0",
     "mongodb": "^4.1.4",
     "sanitize-html": "^2.5.3",
+    "socket.io": "^4.4.1",
     "typescript": "^4.4.4",
     "validator": "^13.7.0"
   },
