--- a/client2/package.json
+++ b/client2/package.json
@@ -32,6 +32,8 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "^7.16.7",
+    "@types/dotenv-webpack": "^7.0.3",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
@@ -41,6 +43,11 @@
     "@types/webpack": "^4.4.11",
     "@types/webpack-dev-server": "^3.1.1",
     "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "dotenv-webpack": "^7.1.0",
+    "fs-extra": "^10.0.1",
+    "html-webpack-harddisk-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5",
