--- a/client2/package.json
+++ b/client2/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "webpack serve --open",
     "build": "webpack",
-    "generate": "babel generateHtml.tsx",
+    "generate": "babel-node --presets @babel/preset-typescript,@babel/preset-react,@babel/preset-env generateHtml.tsx",
     "test": "echo \"Error: no test specified\" && exit 1",
     "previewDist": "node previewDist"
   },
